; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_fetch.c_print_compact.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_fetch.c_print_compact.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i32 }

@STRBUF_INIT = common dso_local global %struct.strbuf zeroinitializer, align 4
@.str = private unnamed_addr constant [10 x i8] c"%-*s -> *\00", align 1
@refcol_width = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [2 x i8] c"*\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.strbuf*, i8*, i8*)* @print_compact to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @print_compact(%struct.strbuf* %0, i8* %1, i8* %2) #0 {
  %4 = alloca %struct.strbuf*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.strbuf, align 4
  %8 = alloca %struct.strbuf, align 4
  store %struct.strbuf* %0, %struct.strbuf** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %9 = bitcast %struct.strbuf* %7 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %9, i8* align 4 bitcast (%struct.strbuf* @STRBUF_INIT to i8*), i64 4, i1 false)
  %10 = bitcast %struct.strbuf* %8 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %10, i8* align 4 bitcast (%struct.strbuf* @STRBUF_INIT to i8*), i64 4, i1 false)
  %11 = load i8*, i8** %5, align 8
  %12 = load i8*, i8** %6, align 8
  %13 = call i32 @strcmp(i8* %11, i8* %12)
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %20, label %15

15:                                               ; preds = %3
  %16 = load %struct.strbuf*, %struct.strbuf** %4, align 8
  %17 = load i32, i32* @refcol_width, align 4
  %18 = load i8*, i8** %5, align 8
  %19 = call i32 @strbuf_addf(%struct.strbuf* %16, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i32 %17, i8* %18)
  br label %40

20:                                               ; preds = %3
  %21 = load i8*, i8** %5, align 8
  %22 = call i32 @strbuf_addstr(%struct.strbuf* %7, i8* %21)
  %23 = load i8*, i8** %6, align 8
  %24 = call i32 @strbuf_addstr(%struct.strbuf* %8, i8* %23)
  %25 = load i8*, i8** %6, align 8
  %26 = call i32 @find_and_replace(%struct.strbuf* %7, i8* %25, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %31, label %28

28:                                               ; preds = %20
  %29 = load i8*, i8** %5, align 8
  %30 = call i32 @find_and_replace(%struct.strbuf* %8, i8* %29, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  br label %31

31:                                               ; preds = %28, %20
  %32 = load %struct.strbuf*, %struct.strbuf** %4, align 8
  %33 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %7, i32 0, i32 0
  %34 = load i32, i32* %33, align 4
  %35 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %8, i32 0, i32 0
  %36 = load i32, i32* %35, align 4
  %37 = call i32 @print_remote_to_local(%struct.strbuf* %32, i32 %34, i32 %36)
  %38 = call i32 @strbuf_release(%struct.strbuf* %7)
  %39 = call i32 @strbuf_release(%struct.strbuf* %8)
  br label %40

40:                                               ; preds = %31, %15
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @strcmp(i8*, i8*) #2

declare dso_local i32 @strbuf_addf(%struct.strbuf*, i8*, i32, i8*) #2

declare dso_local i32 @strbuf_addstr(%struct.strbuf*, i8*) #2

declare dso_local i32 @find_and_replace(%struct.strbuf*, i8*, i8*) #2

declare dso_local i32 @print_remote_to_local(%struct.strbuf*, i32, i32) #2

declare dso_local i32 @strbuf_release(%struct.strbuf*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
